--- a/TechInterview/기술면접준비.md
+++ b/TechInterview/기술면접준비.md
@@ -196,20 +196,15 @@ request.setCharacterEncoding("utf-8");
 
 - 제한 조건
 
-  1. 무상태성
-     REST라는 이름처럼, 서버는 클라이언트의 상태를 저장하지 않습니다. 상태 보존은 클라이언트에서 합니다.
+  1. 무상태성 : REST라는 이름처럼, 서버는 클라이언트의 상태를 저장하지 않습니다. 상태 보존은 클라이언트에서 합니다.
 
-  2. 캐시
-     캐시 가능 여부를 클라이언트에게 알려주어 HTTP 리소스를 캐시하게 합니다.
+  2. 캐시 : 캐시 가능 여부를 클라이언트에게 알려주어 HTTP 리소스를 캐시하게 합니다.
 
-  3. 일관적인 인터페이스
-     서버와 클라이언트를 일관적인 인터페이스(HTTP)로 분리합니다.
+  3. 일관적인 인터페이스 : 서버와 클라이언트를 일관적인 인터페이스(HTTP)로 분리합니다.
 
-  4. 계층화
-     중간 서버를 통해(물론 클라이언트는 알 수 없음) 로드밸런싱, 공유 캐시 등의 기능 등을 사용합니다.
+  4. 계층화 : 중간 서버를 통해(물론 클라이언트는 알 수 없음) 로드밸런싱, 공유 캐시 등의 기능 등을 사용합니다.
 
-  5. Code-On-Demand
-     클라이언트가 실행할 수 있는 코드를 전송하여 기능을 확장합니다.
+  5. Code-On-Demand : 클라이언트가 실행할 수 있는 코드를 전송하여 기능을 확장합니다.
 
   ### 어떠한 장점이 존재하는가?
 
